crates/swc_ecma_react_compiler/tests/fixtures/upstream/error.invalid-nested-function-reassign-local-variable-in-effect/error.txt
Found 1 error:

Error: Cannot reassign variable after render completes

Reassigning `local` after render has completed can cause inconsistent behavior on subsequent renders. Consider using state instead.

error.invalid-nested-function-reassign-local-variable-in-effect.ts:7:6
   5 |     // Create the reassignment function inside another function, then return it
   6 |     const reassignLocal = newValue => {
>  7 |       local = newValue;
     |       ^^^^^ Cannot reassign `local` after render completes
   8 |     };
   9 |     return reassignLocal;
  10 |   };
